[package]
name = "kingr4_weinsa_distributedsystems_project2"
version = "0.1.0"
authors = ["Avi Weinstock <aweinstock314@gmail.com>"]

[dependencies]
argparse = "0.2.1"
byteorder = "0.5.3"
either = "1.0.1"
env_logger = "0.3.5"
futures = { git = "https://github.com/alexcrichton/futures-rs" }
#futures-cpupool = "0.1.2"
futures-cpupool = { git = "https://github.com/alexcrichton/futures-rs" }
log = "0.3.6"
nom = "1.2.4"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }

[replace]
"futures:0.1.6" = { git = "https://github.com/alexcrichton/futures-rs" }
